# msvc-wine_issue-41_repro

./: .gitignore  CMakeLists.txt  Dockerfile  Readme.md  wine-msvc.sh
CMake/: Utils.cmake
IssueRepro/: CMakeLists.txt  Testing.cpp  dllmain.cpp  framework.h
